--- a/views/404.ejs
+++ b/views/404.ejs
@@ -2,8 +2,11 @@
     <div class="index-container bg-red-600">
         <div class="head mb-20">
             <h1 class="text-center pb-2 pt-5">TaskMania</h1>
+            <h1 class="text-center px-10 text-red-500">
+                404!
+            </h1>
             <h2 class="text-center px-10 mb-16">
-                Page Not Found!
+                ...Ops! Page Not Found!
             </h2>
         </div>
     </div>
