Changed colour of 404 to light red

--- a/public/stylesheets/App.css
+++ b/public/stylesheets/App.css
@@ -5,6 +5,7 @@
   --green-custom: #008000;
   --white-custom: #ffffff;
   --red-custom: #ff0000;
+  --light-red-custom: #ff4141;
   --gray-custom: #808080;
 }
 
@@ -22,6 +23,10 @@
 body {
   width: 100%;
   overflow-x: hidden !important;
+}
+
+.not-found {
+  color: var(--light-red-custom) !important;
 }
 
 .nav-link ul li {
